# veiled

./: .dockerignore  .gitignore  ASC_COMPARISON.md  Cargo.toml  Dockerfile  Makefile  README.md  SCENARIO.md  build.rs  docker-compose.yml
.github/workflows/: ci.yml
crates/veiled-cli/: Cargo.toml
crates/veiled-cli/src/: main.rs
crates/veiled-core/: Cargo.toml
crates/veiled-core/examples/: credentials.rs  membership_proof.rs  pedersen.rs
crates/veiled-core/src/: child_credential.rs  commitment.rs  credential.rs  crs.rs  lib.rs  nullifier.rs  nullifier_v2.rs  proof.rs  service_proof.rs  types.rs
crates/veiled-registry/: Cargo.toml
crates/veiled-registry/src/: bitcoin_anchor.rs  db.rs  error.rs  lib.rs  main.rs  server.rs  store.rs
crates/veiled-registry/src/routes/: has.rs  mod.rs  register.rs  sets.rs  verify.rs
crates/veiled-registry/tests/: api.rs
crates/vtxo-tree/: Cargo.toml  docker-compose.yml
crates/vtxo-tree/src/: tree.rs  tx.rs
crates/vtxo-tree/tests/: e2e.rs  integration.rs
demo/: simulate.rs
docker/: Dockerfile
docs/: API.md  ASC_COMPARISON.md  CRYPTOGRAPHY.md  EXPLANATION.md  LAYOUT.md  PROTOCOL.md  SCENARIO.md
examples/: credentials.rs  membership_proof.rs  pedersen.rs
proto/: merchant.proto  registry.proto
scripts/: dev.sh  docker-init-chain.sh  docker-registry-entrypoint.sh  docker-ui-entrypoint.sh  run-simulation.sh
src/: client.rs  lib.rs
src/core/: beneficiary.rs  child_credential.rs  commitment.rs  credential.rs  crs.rs  full_flow_test.rs  merchant.rs  mod.rs  nullifier.rs  nullifier_v2.rs  payment.rs  payment_identity.rs  proof.rs  registry.rs  request.rs  service_proof.rs  tx.rs  types.rs  utils.rs  verifier.rs
src/registry/: bitcoin_anchor.rs  db.rs  error.rs  mod.rs  server.rs  service.rs  store.rs  wallet.rs
src/registry/routes/: has.rs  mod.rs  register.rs  sets.rs  verify.rs  verify_registration.rs
src/vtxo_tree/: mod.rs  tree.rs  types.rs
tests/: api.rs  e2e.rs  full_flow.rs  integration.rs  registry_grpc_test.rs
ui/: README.md  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.ts
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/api/admin/finalize/: route.ts
ui/app/api/admin/setup/: route.ts
ui/app/api/beneficiary/credential/: route.ts
ui/app/api/beneficiary/finalize/: route.ts
ui/app/api/beneficiary/incoming/: route.ts
ui/app/api/beneficiary/merchants/: route.ts
ui/app/api/beneficiary/payment/: route.ts
ui/app/api/beneficiary/payment-id/: route.ts
ui/app/api/beneficiary/register/: route.ts
ui/app/api/beneficiary/set-status/: route.ts
ui/app/api/beneficiary/set-stream/: route.ts
ui/app/api/config/: route.ts
ui/app/api/merchant/create/: route.ts
ui/app/api/merchant/identities/: route.ts
ui/app/api/merchant/payments/: route.ts
ui/app/api/merchant/receive-registration/: route.ts
ui/app/api/merchant/verify-payment/: route.ts
ui/app/api/reset/: route.ts
ui/app/api/setup/init/: route.ts
ui/app/api/setup/seed-merchants/: route.ts
ui/app/api/state/: route.ts
ui/app/api/wallet/balance/: route.ts
ui/app/api/wallet/create/: route.ts
ui/app/api/wallet/faucet/: route.ts
ui/app/api/wallet/scan-address/: route.ts
ui/app/api/wallet/send/: route.ts
ui/app/api/wallet/tx/: route.ts
ui/app/beneficiary/: page.tsx
ui/app/demo/: page.tsx
ui/app/launch/: page.tsx
ui/app/merchant/: page.tsx
ui/components/: FaucetButton.tsx  HexDisplay.tsx  PhaseCard.tsx  ScrollReveal.tsx  Stepper.tsx  ToastProvider.tsx  WalletCard.tsx
ui/lib/: config.ts  core.ts  demo-participants.ts  grpc.ts  helper.ts  log.ts  merchant-spawn.ts  process-pool.ts  state.ts  types.ts  useLocalState.ts  wallet.ts
ui/tests/: full_stack.test.ts
