[package]
name = "veiled"
version = "0.1.0"
edition = "2021"

[lib]
name = "veiled"
path = "src/lib.rs"

[[bin]]
name = "veiled-registry-grpc"
path = "src/bin/registry_grpc.rs"

[dependencies]
# Core
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
k256 = { version = "0.13", features = ["arithmetic", "hash2curve"] }
rand_core = { version = "0.6", features = ["getrandom"] }
hkdf = "0.12"

# Registry
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.31", features = ["bundled"] }
bitcoin = { version = "0.32", features = ["serde", "rand-std"] }
tonic = "0.12"
prost = "0.13"

[build-dependencies]
tonic-build = "0.12"

# CLI
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rand = "0.8"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
bitcoincore-rpc = "0.19"
