[package]
name = "veiled"
version = "0.1.0"
edition = "2021"

[lib]
name = "veiled"
path = "src/lib.rs"

[[bin]]
name = "veiled-registry-grpc"
path = "src/bin/registry_grpc.rs"

[[bin]]
name = "beneficiary"
path = "src/bin/beneficiary.rs"

[[bin]]
name = "merchant"
path = "src/bin/merchant/main.rs"

[[bin]]
name = "demo"
path = "demo/simulate.rs"

[[bin]]
name = "veiled-helper"
path = "src/bin/veiled_helper.rs"

[[bin]]
name = "veiled-wallet"
path = "src/bin/veiled_wallet.rs"

[dependencies]
# Core
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
k256 = { version = "0.13", features = ["arithmetic", "hash2curve"] }
rand_core = { version = "0.6", features = ["getrandom"] }
hkdf = "0.12"
bip39 = "2"
bitcoincore-rpc = "0.19"

# BDK wallet (replaces raw bitcoind wallet management)
bdk_wallet = "2"
bdk_bitcoind_rpc = "0.21"

# Registry
tokio = { version = "1", features = ["full"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bitcoin = { version = "0.32", features = ["serde", "rand-std"] }
tonic = "0.12"
prost = "0.13"
tokio-stream = "0.1"

# Persistence
rusqlite = { version = "0.31", features = ["bundled"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
rand = "0.8"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
