[package]
name = "veiled-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
veiled-core = { path = "../veiled-core" }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
rand = "0.8"
sha2 = "0.10"
